--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "tokyo-james-landing-page",
-  "description": "Tokyo James new collection",
+  "name": "tokyo-james",
+  "description": "Tokyo James Official Website",
   "version": "1.0.0",
   "author": "David Akuma",
   "dependencies": {
     "gatsby": "^2.19.5",
+    "gatsby-plugin-google-analytics": "^2.11.0",
     "gatsby-plugin-manifest": "^2.2.38",
     "gatsby-plugin-react-helmet": "^3.1.21",
     "gatsby-plugin-sass": "^2.1.27",
@@ -12,6 +13,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
+    "react-player": "^2.8.2",
     "react-youtube": "^7.13.1"
   },
   "keywords": [
