--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,15 @@
 .cache
 node_modules
 yarn-error.log
+gatsby-browser.js
+gatsby-config.js
+gatsby-node.js
+gatsby-ssr.js
+package-lock.json
+package.json
+
+
 
 # Build directory
-/public
+/src
 .DS_Store
